fixes spacing issues

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
    
 }
 .container{
-    width: 70%;
+    width: 80%;
     
 }
 .navbar{
@@ -144,4 +144,8 @@ body{
 .news01 span, .news02 span, .news03 span{
      font-size: 12px;
      color: hsl(236, 13%, 42%);
+}
+.words{
+    display: grid;
+    align-content: space-between;
 }
